Fix navbar and use dropdown on mobile

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,8 +1,6 @@
 .sideBar {
-  width: 220px;
   height: 100%;
   min-height: 600px;
-  position: fixed;
   border-right: 2px solid #03191e;
   background-image: url("light-stuff.png");
   z-index: 1;
@@ -13,7 +11,6 @@
   font-size: 15px;
   border-radius: 10px;
   display: inline-block;
-  width: 200px;
   padding: 13px 0 13px 0;
 }
 
@@ -40,65 +37,17 @@
   border-bottom: 3px solid white;
 }
 
-.sideBar svg {
+.topBar {
+  background-image: url("light-stuff.png");
 }
 
-.textDiv {
-}
-
-.sideBarText {
-  font-size: 15px;
-}
-
-.sideBarHome {
-  font-weight: 700;
-}
-
-.copyright {
-  font-size: 11px;
+.topMenu {
   position: absolute;
-  bottom: 10px;
-  padding-left: 22%;
-  width: 200%;
+  width: 100%;
+  height: 100%;
 }
 
-.logo {
-  font-size: 11px;
+.fullHeight {
   position: absolute;
-  bottom: 10px;
-  height: 110px;
-}
-
-.sideBarLinkShow {
-  display:none;
-}
-
-.sideBarLinkHide {
-  display:none;
-}
-
-@media (max-width: 1024px) {
-  .sideBar {
-    display:none;
-  }
-
-  .sideBarLinkShow {
-    display: block;
-    background-image: url("light-stuff.png");
-    padding: 5px;
-    position: fixed;
-    width: 30px;
-    height: 30px;
-    z-index: 2;
-  }
-
-  .sideBarLinkHide {
-    display: none;
-    background-image: url("light-stuff.png");
-    padding: 5px 0 0 190px;
-    position: fixed;
-    width: 30px;
-    height: 30px;
-    z-index: 2;
-  }
+  height: 100%;
 }
